# frontend-sdl2

./: CMakeLists.txt  README.md  install.cmake  packaging-linux.cmake  packaging-macos.cmake  packaging-windows.cmake  vcpkg.json
.github/workflows/: build.yaml  buildcheck.yaml  lockdown-prs.yaml  release-linux.yaml  release-macos.yaml  release-windows.yaml
cmake/: SDL2Target.cmake
src/: AudioCapture.h  AudioCaptureImpl_WASAPI.cpp  CMakeLists.txt  ProjectMSDLApplication.cpp  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp  SDLRenderingWindow.cpp  SDLRenderingWindow.h
src/gui/: AboutWindow.cpp  CMakeLists.txt  FileChooser.cpp  HelpWindow.cpp  MainMenu.cpp  MainMenu.h  ProjectMGUI.cpp  ProjectMGUI.h  SettingsWindow.cpp
src/gui/preset_editor/: CMakeLists.txt  CodeContextInformation.cpp  CodeContextInformation.h  CodeEditorTab.cpp  CodeEditorTab.h  CodeEditorWindow.cpp  CodeEditorWindow.h  EditorMenu.cpp  EditorMenu.h  EditorPreset.cpp  EditorPreset.h  ExpressionCodeTypes.h  PresetEditorGUI.cpp  PresetEditorGUI.h  PresetFile.cpp  PresetFile.h
src/gui/preset_editor/imgui_color_text_editor/: CMakeLists.txt  TextEditor.cpp  TextEditor.h
src/notifications/: CMakeLists.txt  UpdateWindowTitleNotification.h
src/resources/: projectMSDL-component.plist  projectMSDL.properties.in
tests/: CMakeLists.txt
tests/audio/: CMakeLists.txt  ListAudioDevicesTest.cpp
tests/cli/: CMakeLists.txt  HelpOptionTest.cpp
tests/renderer/: CMakeLists.txt  MainExecutionTest.cpp  RenderSmokeTest.cpp
tests/ui/: CMakeLists.txt  EscOverlayToggleTest.cpp
